Fixes bug for visibility and edit post not working

--- a/cmd/static/css/user-profile.css
+++ b/cmd/static/css/user-profile.css
@@ -55,7 +55,7 @@ img {
     flex-direction: row;
 }
 
-.profile-pic button {
+#profile-pic-confirm-button {
     display: none;
     margin-left: 20px;
 }
